--- a/page6.html
+++ b/page6.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rXPEE75L2L mbr-fullscreen mbr-parallax-background" id="header2-28">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-rXPEE75L2L mbr-fullscreen mbr-parallax-background" id="header2-28">
 
     
 
